[package]
name = "mosaic"
version = "0.1.0"
edition = "2021"
description = "Window tiling facilities for non-tiling window managers"
license = "MIT"
authors = ["Rob N ★ <robn@despairlabs.com>"]
repository = "https://github.com/robn/mosaic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
clap = { version = "3.2", features = ["derive"] }
clap-num = "1.0"
env_logger = "0.9"
log = "0.4"
xcb = { version = "1.1", features = [ "debug_atom_names" ] }
