[package]
name = "mosaic"
version = "0.1.0"
edition = "2024"
description = "Window tiling facilities for non-tiling window managers"
license = "MPL-2.0"
authors = ["Rob Norris <robn@despairlabs.com>"]
repository = "https://github.com/robn/mosaic"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.10"
clap = { version = "4.5", features = ["derive"] }
clap-num = "1.2"
env_logger = "0.11"
log = "0.4"
xcb = { version = "1.7", features = [ "debug_atom_names" ] }
